--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <div class="container">
         <h1>Hello Recursion</h1>
     </div>
+    <div class="container">
+        <h1>Hello Blue</h1>
+    </div>
+    <div class="container">
+        <h1>Hello Yellow</h1>
+    </div>
+    <div class="container">
+        <h1>Hello Red</h1>
+    </div>
 </body>
 </html>
